plugins {
    id 'java'
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.0.9'
}

group 'org.example'
version '1.0-SNAPSHOT'

sourceCompatibility = '15'
mainClassName = "main.Main"
compileJava.options.encoding = 'UTF-8'

repositories {
    mavenCentral()
}

dependencies {
    implementation 'junit:junit:4.12'
    testImplementation group: 'de.saxsys', name: 'jfx-testrunner', version: '1.2'
    testImplementation group: 'org.awaitility', name: 'awaitility', version: '3.1.6'
    testImplementation group: 'org.mockito', name: 'mockito-core', version: '2.1.0'
    testRuntimeOnly group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.7.0'
    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.7.0'
    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-params', version: '5.7.0'
    testImplementation group: 'org.junit.platform', name: 'junit-platform-runner', version: '1.7.0'
    testImplementation group: 'org.junit.platform', name: 'junit-platform-suite-api', version: '1.7.0'
    compile group: 'de.saxsys', name: 'mvvmfx', version: '1.8.0'
    compile "org.slf4j:slf4j-simple:1.6.1"
    compile 'org.mongodb:mongodb-driver-sync:4.1.1'
    compile 'org.mongodb:mongodb-driver-legacy:4.1.1'
    compile "com.oracle.ojdbc:ojdbc8:19.3.0.0"
    implementation group: 'com.jfoenix', name: 'jfoenix', version: '9.0.10'
}

/*test {
    useJUnitPlatform();
}*/

javafx {
    version = "15"
    modules = [ 'javafx.controls', 'javafx.base', 'javafx.graphics' ,'javafx.fxml']
}

run{
    jvmArgs = [
            "--add-exports=javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED",     // Add this line
            "--add-opens=java.base/java.lang.reflect=com.jfoenix"
    ]
}